--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "react-router-dom": "4.3.1",
         "react-transition-group": "2.5.0",
         "reset-css": "4.0.1",
-        "socket.io-client": "2.1.1"
+        "socket.io-client": "2.1.1",
+        "styled-components": "^4.3.2"
     },
     "devDependencies": {
         "@babel/core": "7.2.2",
